--- a/transforms/style.css
+++ b/transforms/style.css
@@ -3,8 +3,8 @@
   --height: 100px;
   --top-color: #f44336;
   --bottom-color: #2196F3;
-  --vertical-angel: 108.5deg;
-  --horizontal-angel: 18.5deg;
+  --vertical-angle: 108.5deg;
+  --horizontal-angle: 18.5deg;
 }
 
 .separator {
@@ -19,7 +19,7 @@
   width: 100%;
   height: 100%;
   background-color: var(--top-color);
-  transform: skewY(calc(-1 * var(--horizontal-angel)));
+  transform: skewY(calc(-1 * var(--horizontal-angle)));
   transform-origin: bottom left;
 }
 
@@ -29,13 +29,13 @@
   width: 100%;
   height: 100%;
   background-color: var(--bottom-color);
-  transform: skewY(calc(-1 * var(--horizontal-angel)));
+  transform: skewY(calc(-1 * var(--horizontal-angle)));
   transform-origin: bottom left;
 }
 
 .vertical .separator::before,
 .vertical .separator::after {
-  transform: skewY(var(--vertical-angel));
+  transform: skewY(var(--vertical-angle));
 }
 
 .separator.reverse {
